--- a/css/media.css
+++ b/css/media.css
@@ -113,6 +113,13 @@
     .burger-booking-img2 {
         max-width: 30%;
     }
+    .price-border {
+        top: 100px;
+        left: 100px;
+    }
+    .btn {
+        padding: 40px 0;
+    }
     .bottle-img {
         display: none;
     }
@@ -133,6 +140,15 @@
     }
     .title {
         font-size: 40px;
+    }
+    #header {
+        height: 100vh;
+    }
+    #footer {
+        height: auto;
+    }
+    #contacts {
+        height: auto;
     }
     .choose-title {
         font-size: 32px;
@@ -203,7 +219,7 @@
     }
     .discover-title {
         font-size: 28px;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
     }
     .img-icon {
         width: 7%;
@@ -227,6 +243,9 @@
         font-size: 16px;
         width: 267px;
         padding: 3px 3px 0 6px;
+    }
+    #header {
+        height: 100vh;
     }
 }
 @media screen and (max-width: 320px) {
