--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,23 @@ a {
     font-family: 'BebasNeue-Bold';
     src: url(../fonts/BebasNeue-Bold.ttf);
 }
-
+#toTop {
+    width: 40px;
+    height: 40px;
+    border: none;
+    z-index: 9999;
+    font-size: 20px;
+    border-radius: 3px;
+    padding: 5px;
+    text-align: center;
+    background-color: rgb(57, 236, 57);
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    color: #fff;
+    cursor: pointer;
+    display: none;
+}
 /* ========== BURGER MENU ============ */
 .fixed__class {
     position: fixed;
@@ -70,7 +86,7 @@ a {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.9);
+    background-color: rgba(0,0,0,0.8);
     opacity: 0;
     visibility: hidden;
     transform: scale(1.3);
@@ -144,6 +160,13 @@ a {
     padding: 3px 6px;
     margin-top: 120px;
     width: 394px;
+    transform: translate(0px, 80px);
+    opacity: 0;
+    transition: 0.8s ease 0s;
+}
+.left-content-txt.active__class {
+    transform: translate(0px, 0px);
+    opacity: 1;
 }
 .left-content-title {
     font-family: 'AlfaSlabOne-Regular';
@@ -152,12 +175,38 @@ a {
     line-height: 70px;
     text-shadow: 4px 4px 4px #fff;
     padding-top: 30px;
+    transform: translate(0px, 80px);
+    opacity: 0;
+    transition: 0.8s ease 0s;
 }
-.left-content-title span {
+.left-content-title.active__class {
+    transform: translate(0px, 0px);
+    opacity: 1;
+    transition: 0.8s ease 0.2s;
+}
+.left-content-text {
     font-size: 56px;
+    font-family: 'AlfaSlabOne-Regular';
+    color: #3d2514;
+    line-height: 70px;
+    text-shadow: 4px 4px 4px #fff;  
+    transform: translate(0px, 80px);
+    opacity: 0;
+    transition: 0.8s ease 0s;
+}
+.left-content-text.active__class {
+    transform: translate(0px, 0px);
+    opacity: 1;
+    transition: 0.8s ease 0.4s;
 }
 .right-content {
     position: relative;
+    transform: scale(0);
+    transition: 0.8s ease 0s;
+}
+.right-content.active__scale {
+    transform: scale(1);
+    transition: 0.8s ease 0.6s;
 }
 .right-content img {
     position: absolute;
