--- a/css/style.css
+++ b/css/style.css
@@ -42,19 +42,25 @@ a {
 #toTop {
     width: 40px;
     height: 40px;
-    border: none;
     z-index: 9999;
-    font-size: 20px;
-    border-radius: 3px;
     padding: 5px;
     text-align: center;
-    background-color: rgb(57, 236, 57);
     position: fixed;
     bottom: 15px;
     right: 15px;
-    color: #fff;
     cursor: pointer;
     display: none;
+}
+#toTop p {
+    background: linear-gradient(to bottom, rgb(243, 213, 77), rgb(143, 117, 1));
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    font-weight: bold;
+    border-radius: 6px;
+    color: #000;
+    font-size: 18px;
+    border: 1px solid rgb(197, 161, 2);
 }
 /* ========== BURGER MENU ============ */
 .fixed__class {
